--- a/OruBloggen/Views/Account/Register.cshtml
+++ b/OruBloggen/Views/Account/Register.cshtml
@@ -42,6 +42,12 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Team, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.DropDownList("Team", ViewData["Teams"] as List<SelectListItem>, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
