--- a/OruBloggen/Views/Account/Register.cshtml
+++ b/OruBloggen/Views/Account/Register.cshtml
@@ -5,7 +5,9 @@
 
 <h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Register", "Account", FormMethod.Post,
+    new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form"}))
+
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
@@ -59,6 +61,14 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(m => m.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <input type="file" name="image"/>
+        </div>
+    </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
