--- a/OruBloggen/Views/Admin/PostDetails.cshtml
+++ b/OruBloggen/Views/Admin/PostDetails.cshtml
@@ -1,50 +1,33 @@
 ﻿@model OruBloggen.Models.AdminViewModel
+@using Microsoft.AspNet.Identity;
+@using OruBloggen.Models;
 @{
     ViewBag.Title = "PostDetails";
 }
+@if (Utility.isAdmin(User.Identity.GetUserId()))
+{
+    <h2>Post</h2>
 
-<h2>PostDetails</h2>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.postModel.PostTitle)
+            </dt>
 
-<div>
-    <h4>PostModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.postModel.PostTitle)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.postModel.PostTitle)
-        </dd>
-
-        @*<dt>
-            @Html.DisplayNameFor(model => model.Author)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Author)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Reciever)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Reciever)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Message)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Message)
-        </dd>*@
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Delete", "DeletePost", new { id = Model.postModel.PostID }) |
-    @Html.ActionLink("Back to List", "Posts")
-</p>
-
+            <dd>
+                @Html.DisplayFor(model => model.postModel.PostTitle)
+            </dd>
+            <dd>
+                @Html.DisplayFor(model => model.postModel.PostText)
+            </dd>
+        </dl>
+    </div>
+    <p>
+        @Html.ActionLink("Delete", "DeletePost", new { id = Model.postModel.PostID }) |
+        @Html.ActionLink("Back to List", "Posts")
+    </p>
+} else
+{
+    <h3>You do not have access to this page.</h3>
+}
