--- a/OruBloggen/Views/Admin/DeletePost.cshtml
+++ b/OruBloggen/Views/Admin/DeletePost.cshtml
@@ -1,48 +1,55 @@
 ﻿@model OruBloggen.Models.AdminViewModel
-
+@using Microsoft.AspNet.Identity;
+@using OruBloggen.Models;
 @{
     ViewBag.Title = "Delete";
 }
+@if (Utility.isAdmin(User.Identity.GetUserId()))
+{
+    <h2>Delete post</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <hr />
+        <dl class="dl-horizontal">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PostModel</h4>
-    <hr />
-    <dl class="dl-horizontal">
+            <dd>
+                @Model.userModelList.FirstOrDefault(p => p.UserID == @Model.postModel.PostUserID).UserFirstname
+            </dd>
 
-        <dd>
-            @Model.userModelList.FirstOrDefault(p => p.UserID == @Model.postModel.PostUserID).UserFirstname
-        </dd>
-
-        <dd>
-            @Model.userModelList.FirstOrDefault(p => p.UserID == @Model.postModel.PostUserID).UserLastname
-        </dd>
-
-
-        <dd>
-            @Html.DisplayFor(model => model.postModel.PostTitle)
-        </dd>
+            <dd>
+                @Model.userModelList.FirstOrDefault(p => p.UserID == @Model.postModel.PostUserID).UserLastname
+            </dd>
 
 
-        <dd>
-            @Html.DisplayFor(model => model.postModel.PostText)
-        </dd>
-
-        <dd>
-            @Html.DisplayFor(model => model.postModel.PostDate)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.postModel.PostTitle)
+            </dd>
 
 
-    </dl>
+            <dd>
+                @Html.DisplayFor(model => model.postModel.PostText)
+            </dd>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+            <dd>
+                @Html.DisplayFor(model => model.postModel.PostDate)
+            </dd>
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Posts")
-        </div>
-    }
-</div>
+
+        </dl>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Posts")
+            </div>
+        }
+    </div>
+}
+else
+{
+    <h3>You do not have access to this page.</h3>
+}
