--- a/OruBloggen/Views/Post/Post.cshtml
+++ b/OruBloggen/Views/Post/Post.cshtml
@@ -1,38 +1,41 @@
-﻿
+﻿@model OruBloggen.Models.AddPostViewModel
+
 @{
     ViewBag.Title = "PostView";
 }
 
 <h2>PostView</h2>
 
-<div>
-    <input type="text" class="addTitle" id="titlePost" />
-</div>
+@using (Html.BeginForm("AddPost", "Post", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
 
-<textarea name="post" class="addPost" id="txtPost" rows="5"> </textarea>
+    <div>
+    @Html.TextBoxFor(model => model.PostTitle)
+    </div>
+    <div>
+        @Html.TextAreaFor(model => model.PostText)
+    </div>
 
-<select id="chooseType" class="form-control" onchange="viewCategory()">
-    <option value="1">Formellt inlägg</option>
-    <option value="2">Informellt inlägg</option>
-</select>
-<div>
-    <div id="formal" style="float:left;">@Html.DropDownList("Categories", ViewData["CategoriesFormal"] as List<SelectListItem>, new { @class = "form-control"})</div>
-    <div id="informal" style="display:none; float:left;">@Html.DropDownList("Categories", ViewData["CategoriesInformal"] as List<SelectListItem>, new { @class = "form-control" })</div>
-</div>
-<div>
-    <input type="file" id="file" name="file" />
-</div>
-<input type="button" class="btn btn-waring" id="btnPost" value="Skriv ett meddelande" />
+    <div>@Html.DropDownList("PostFormal", ViewData["PostTypes"] as List<SelectListItem>, new { @class = "form-control", @onchange = "viewCategory(this.value)" }) </div>
+
+    <div id="formal" style="float:left;">@Html.DropDownList("CategoryFormal", ViewData["CategoriesFormal"] as List<SelectListItem>, new { @class = "form-control" })</div>
+    <div id="informal" style="display:none; float:left;">@Html.DropDownList("CategoryInformal", ViewData["CategoriesInformal"] as List<SelectListItem>, new { @class = "form-control" })</div>
+
+    <input type="file" name="file" />
+    <input type="submit" value="Skicka inlägg" />
+}
+
 
 
 @section scripts {
     <script type="text/javascript">
 
-        function viewCategory() {
-            var value = $("#chooseType").val();
+        function viewCategory(value) {
             var formal = document.getElementById("formal");
             var informal = document.getElementById("informal");
-            if (value == 2) {
+
+            if (value == "false") {
                 informal.style.display = 'block';
                 formal.style.display = 'none';
             }
@@ -41,51 +44,5 @@
                 informal.style.display = 'none';
             }
         };
-
-        $(function post () {
-            $("#btnPost").click(function (ev) {
-                ev.preventDefault();
-                var title = $("#titlePost").val();
-                var text = $("#txtPost").val();
-                var formal = false;
-                var category = null;
-                var file = $('#file').prop('files')[0];
-
-                if ($("#chooseType").val() == 1) {
-                    formal = true;
-                    category = $("#formal option:selected").val();
-                }
-
-                else {
-                    category = $("#informal option:selected").val();
-                }
-
-                //var post = '{PostTitle: "' + title + '", PostText: "' + text + '", PostFormal: "' + formal + '", PostCategoryID: "' + category + '"}';
-
-
-
-                $.post('/api/addPost?title=' + title + '&text=' + text + '&formal=' + formal + '&category=' + category + '&file=' + file);
-
-
-                //$.ajax({
-                //    type: "POST",
-                //    url: "/api/addPost",
-                //    data: post,
-                //    contentType: "application/json; charset = UTF-8",
-                //    dataType: "json",
-                //    success: function () {
-                //        location.reload();
-                //    },
-                //    failure: function (response) {
-                //        alert(response.responseText);
-                //    },
-                //    error: function (response) {
-                //        alert(response.responseText);
-                //    }
-                //});
-
-            });
-        });
-
-    </script>    
+    </script>
 }
