--- a/OruBloggen/Views/Admin/Index.cshtml
+++ b/OruBloggen/Views/Admin/Index.cshtml
@@ -1,34 +1,34 @@
 ﻿@using Microsoft.AspNet.Identity;
 @using OruBloggen.Models;
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Admin Central";
 }
 @if (Utility.isAdmin(User.Identity.GetUserId()))
 {
     <h2>Admin Central</h2>
     <div class="row">
         <div class="col-md-4">
-            <h2>Posts</h2>
+            <h2>Inlägg</h2>
             @*<p>
                     ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
                     enables a clean separation of concerns and gives you full control over markup
                     for enjoyable, agile development.
                 </p>*@
-            <p><a class="btn btn-default" href="/Admin/Posts">Go to Posts</a></p>
+            <p><a class="btn btn-default" href="/Admin/Posts">Gå till användare</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Users</h2>
+            <h2>Användare</h2>
             @*<p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>*@
-            <p><a class="btn btn-default" href="/Admin/AllUsers">Go to Users</a></p>
+            <p><a class="btn btn-default" href="/Admin/AllUsers">Gå till inlägg</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Reports</h2>
+            <h2>Anmälningar</h2>
             @*<p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>*@
-            <p><a class="btn btn-default" href="/Admin/AllUsers">Go to Reports</a></p>
+            <p><a class="btn btn-default" href="/Admin/AllUsers">Gå till anmälningar</a></p>
         </div>
     </div>
 }
 else
 {
-    <h3>You do not have access to this page.</h3>
+    <h3>Du har inte behörighet till denna sidan.</h3>
 }
