Finslipade Admins Posts och PostDetails

--- a/OruBloggen/Views/Admin/PostDetails.cshtml
+++ b/OruBloggen/Views/Admin/PostDetails.cshtml
@@ -11,9 +11,9 @@
     <div>
         <hr />
         <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.postModel.PostTitle)
-            </dt>
+            <dd>
+                @Model.userModel.UserFirstname @Model.userModel.UserLastname
+            </dd>
 
             <dd>
                 @Html.DisplayFor(model => model.postModel.PostTitle)
