--- a/OruBloggen/Views/Meeting/Meeting.cshtml
+++ b/OruBloggen/Views/Meeting/Meeting.cshtml
@@ -47,6 +47,14 @@
         </div>
     </div>
 
+    <div class=" form-group">
+        @Html.Label("Search users", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            <input class="form-control" type="text" id="searchString" />
+            <input class="btn btn-default" type="button" id="search" value="Search" />
+        </div>
+    </div>
+
     <div class="form-group">
         @Html.LabelFor(model => model.Users, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
@@ -80,6 +88,10 @@
             })
             .on("click", "#remove", function () {
                 $("#selectedUsersLb :selected").remove().appendTo("#usersLb");
+            })
+            .on("click", "#search", function () {
+                var searchString = $("#searchString").val();
+                location.href='/Meeting/Meeting?searchString=' + searchString;
             });
     });
 </script>
