Fixed möteninbjudningar samt skapa möten

--- a/OruBloggen/Views/Meeting/Meeting.cshtml
+++ b/OruBloggen/Views/Meeting/Meeting.cshtml
@@ -38,6 +38,7 @@
             @Html.ValidationMessageFor(model => model.Meeting.MeetingStartDate, "", new { @class = "text-danger" })
         </div>
     </div>
+    <input placeholder="Date" class="textbox-n" type="text" onfocus="(this.type='datetime-local')" onblur="(this.type='text')" id="date">
 
     <div class="form-group">
         @Html.LabelFor(model => model.Meeting.MeetingEndDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -63,7 +64,7 @@
             <input class="btn btn-default" type="button" name="-" id="remove" value="-" />
         </div>
     </div>
-    
+
     <div class="form-group">
         @Html.LabelFor(model => model.SelectedUsers, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
