--- a/OruBloggen/Views/Account/Register.cshtml
+++ b/OruBloggen/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 <h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post,
-    new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form"}))
+    new { enctype = "multipart/form-data", @class = "form-horizontal", role = "form" }))
 
 {
     @Html.AntiForgeryToken()
@@ -44,6 +44,12 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.Position, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Position, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Team, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.DropDownList("Team", ViewData["Teams"] as List<SelectListItem>, new { @class = "form-control" })
@@ -65,7 +71,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            <input type="file" name="image"/>
+            <input type="file" name="image" />
         </div>
     </div>
 
