Listat alla användare, klick på en användare länkar vidare till användarens sida. Fixade en hover-design

--- a/OruBloggen/Content/Site.css
+++ b/OruBloggen/Content/Site.css
@@ -39,7 +39,15 @@ textarea {
     padding: 6px;
     box-shadow: 0px 0px 20px #888;
 }
-
+.hover tr:hover
+{
+    background-color: black;
+    Color: white;
+}
+.textSize
+{
+    font-size: 20px;
+}
 
 
 
