--- a/OruBloggen/Views/Shared/_LoginPartial.cshtml
+++ b/OruBloggen/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
 
         <ul class="nav navbar-nav navbar-right">
             <li>
-                @Html.ActionLink("Välkommen " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+                @Html.ActionLink("Välkommen " + User.Identity.GetUserName() + "!", "ShowInfo", "ProfilePage", routeValues: null, htmlAttributes: new { title = "Manage" })
             </li>
             <li>
                 @Html.ActionLink("Inlägg", "Post", "Post")
