--- a/OruBloggen/Views/Shared/_LoginPartial.cshtml
+++ b/OruBloggen/Views/Shared/_LoginPartial.cshtml
@@ -19,14 +19,14 @@
     <li>
         @Html.ActionLink("Möte", "Meeting", "Meeting")
     </li>
-    @*@if (Request.IsAuthenticated)
+    @if (Request.IsAuthenticated)
     {
         if (Utility.isAdmin(User.Identity.GetUserId()))
         {
             <li>@Html.ActionLink("Admin", "Index", "Admin")</li>
         }
 
-    }*@
+    }
     <li><a href="javascript:document.getElementById('logoutForm').submit()">Logga ut</a></li>
 </ul>
     }
