--- a/OruBloggen/Views/Meeting/YourMeetings.cshtml
+++ b/OruBloggen/Views/Meeting/YourMeetings.cshtml
@@ -60,7 +60,8 @@
         </td>
         <td>
             @Html.ActionLink("Details", "Details", new { meetingId=item.MeetingID }) |
-            @Html.ActionLink("Ställ in möte", "CancelMeeting", new { meetingId=item.MeetingID })
+            @Html.ActionLink("Ställ in möte", "CancelMeeting", 
+                new { meetingId=item.MeetingID, title = item.MeetingTitle, startDate = item.MeetingStartDate  })
         </td>
     </tr>
 }
