--- a/OruBloggen/Content/Site.css
+++ b/OruBloggen/Content/Site.css
@@ -22,3 +22,23 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.two-col {
+    overflow: hidden; /* Makes this div contain its floats */
+}
+.two-col .col1,
+.two-col .col2 {
+    width: 49%;
+    }
+
+.two-col .col1 {
+    float: left;
+    }
+
+.two-col .col2 {
+        float: right;
+    }
+
+.two-col label {
+        display: block;
+    }
